[gd_scene load_steps=29 format=3 uid="uid://b40xd2tjowrjs"]

[ext_resource type="Script" uid="uid://dox6gn0ni3m5k" path="res://Scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://2jun0a6teg4n" path="res://mystic_woods_free_2.2/sprites/characters/slime.png" id="1_7k104"]
[ext_resource type="Shader" uid="uid://b0g0n23dmypm6" path="res://materials/hitflash.tres" id="1_afpow"]
[ext_resource type="Shader" uid="uid://dhbg2m617ccbp" path="res://Scenes/enemyhitflash.tres" id="3_287tu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_287tu"]
resource_local_to_scene = true
shader = ExtResource("1_afpow")
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0830c"]
shader = ExtResource("3_287tu")
shader_parameter/enables = false
shader_parameter/HitColor = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("1_7k104")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("1_7k104")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("1_7k104")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xaro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2u8i"]
radius = 5.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jmwgi"]
radius = 95.0474

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 10.0499

[sub_resource type="Animation" id="Animation_1dp5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enables")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ghaa6"]
resource_name = "hitflashenemy"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enables")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_auwsv"]
_data = {
&"RESET": SubResource("Animation_1dp5w"),
&"hitflashenemy": SubResource("Animation_ghaa6")
}

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
material = SubResource("ShaderMaterial_287tu")
position = Vector2(1, -1)
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_0830c")
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_7xaro")
animation = &"Walk"
autoplay = "Idle"
frame_progress = 0.577541

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -4)
shape = SubResource("CapsuleShape2D_g2u8i")
debug_color = Color(0.75745, 0.454324, 5.77569e-07, 0.42)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
shape = SubResource("CircleShape2D_jmwgi")

[node name="Enemy Hit Box" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Hit Box"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_4gyqm")
debug_color = Color(0.167814, 0.516952, 1, 0.42)

[node name="take damage cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_auwsv")
}

[node name="PlayerAttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Enemy Hit Box" to="." method="_on_enemy_hit_box_body_entered"]
[connection signal="body_exited" from="Enemy Hit Box" to="." method="_on_enemy_hit_box_body_exited"]
[connection signal="timeout" from="take damage cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="PlayerDamageTimer" to="." method="_on_player_damage_timer_timeout"]
